--- a/ui/src/app/layout/navbar/navbar.component.html
+++ b/ui/src/app/layout/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark purple mb-3" [containerInside]="false">
+<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark indigo darken-4 mb-3" [containerInside]="false">
 
   <mdb-navbar-brand><a class="navbar-brand" href="/main-page">Jeeves</a></mdb-navbar-brand>
 
