--- a/ui/src/app/layout/ingredient-list/ingredient-list.component.sass
+++ b/ui/src/app/layout/ingredient-list/ingredient-list.component.sass
@@ -10,3 +10,8 @@
   max-height: 95px
   min-height: 95px
 
+.zoom
+  transition: transform .2s //Animation
+
+.zoom:hover
+  transform: scale(1.5) // (150% зум - Примечание: если масштаб слишком велик, он будет выходить за пределы видового экрана)
