--- a/ui/src/app/layout/coctail-list/coctail/coctail.component.sass
+++ b/ui/src/app/layout/coctail-list/coctail/coctail.component.sass
@@ -2,3 +2,25 @@
   .card-content
     min-height: 425px
     max-height: 425px
+
+.holder
+  position: relative
+  width: 340px
+  height: 505px
+
+.block
+  position: absolute
+  left: 0
+  bottom: 0
+  right: 0
+  top: 0
+  display: none
+
+.holder:hover .block
+  display: block
+
+a
+  color: black
+
+a:hover
+  color: #0d47a1
