--- a/ui/src/app/layout/ingredient-list/ingredient-list.component.html
+++ b/ui/src/app/layout/ingredient-list/ingredient-list.component.html
@@ -3,11 +3,20 @@
 
     <div class="row" *ngFor="let ingredientRow of ingredients">
       <div class="col pl-0 pr-0" *ngFor="let ingredient of ingredientRow">
-        <div class="card mb-1 box-shadow ingredient-ico zoom">
+
+        <div class="card mb-1 box-shadow ingredient-ico">
           <a [href]="'/ingredient-page/' + ingredient.id">
-            <img [src]="ingredient.image">
+            <img [src]="'/assets/images/ingredients/95/' + ingredient.image">
           </a>
+
+          <div class="card box-shadow descr text-center">
+            <a [href]="'/ingredient-page/' + ingredient.id">
+              <img [src]="'/assets/images/ingredients/125/' + ingredient.image" class="mb-1 mt-1">
+            </a>
+            <strong>{{ingredient.name}}</strong>
+          </div>
         </div>
+
       </div>
     </div>
 
