--- a/ui/src/app/layout/ingredient-list/ingredient-list.component.sass
+++ b/ui/src/app/layout/ingredient-list/ingredient-list.component.sass
@@ -9,9 +9,16 @@
   height: 95px
   max-height: 95px
   min-height: 95px
+  position: relative
 
-.zoom
-  transition: transform .2s //Animation
+.descr
+  display: none
+  margin-left: -30px
+  margin-top: -48px
+  height: 200px
+  width: 154px
 
-.zoom:hover
-  transform: scale(1.5) // (150% зум - Примечание: если масштаб слишком велик, он будет выходить за пределы видового экрана)
+.ingredient-ico:hover .descr
+  display: block
+  position: absolute
+  z-index: 9999
