--- a/ui/src/app/layout/ingredient-page/ingredient-page.component.html
+++ b/ui/src/app/layout/ingredient-page/ingredient-page.component.html
@@ -2,7 +2,7 @@
     <h3>
       {{ingredient.name}}
     </h3>
-    <img class="rounded mx-auto d-block mb-3" [src]="ingredient.image">
+    <img class="rounded mx-auto d-block mb-3" [src]="'/assets/images/ingredients/full/' + ingredient.image">
     <div>
       {{ingredient.description}}
     </div>
