--- a/ui/src/app/layout/ingredient-list/ingredient-list.component.sass
+++ b/ui/src/app/layout/ingredient-list/ingredient-list.component.sass
@@ -22,3 +22,14 @@
   display: block
   position: absolute
   z-index: 9999
+
+.ingredient-btn-div
+  position: absolute
+  margin-top: 7px
+  margin-left: 115px
+
+.ingredient-btn
+  max-width: 31px
+  min-width: 31px
+  width: 31px
+
