Fix ingredient referenses from Coctail change size of ingredient img from 125 to 140

--- a/ui/src/app/layout/coctail-list/coctail/coctail.component.html
+++ b/ui/src/app/layout/coctail-list/coctail/coctail.component.html
@@ -22,7 +22,7 @@
       <div class="ml-3 mr-3">
         <div *ngFor="let coctailIngredient of coctail.coctailIngredients">
           <b>
-            <a [href]="'/ingredient-page/' + coctailIngredient.id">
+            <a [href]="'/ingredient-page/' + coctailIngredient.ingredient.id">
               {{coctailIngredient.ingredient.name}}
             </a>
           </b>: {{coctailIngredient.volume}} {{coctailIngredient.unit}}
