Some minor fixes

--- a/ui/src/app/@auth/login/login.component.html
+++ b/ui/src/app/@auth/login/login.component.html
@@ -20,6 +20,6 @@
 
   </div>
   <div class="modal-footer d-flex justify-content-center">
-    <button mdbBtn color="default" class="waves-light" mdbWavesEffect (click)="confirmOperation()">Войти</button>
+    <button mdbBtn color="indigo" class="waves-light" mdbWavesEffect (click)="confirmOperation()">Войти</button>
   </div>
 </form>
