--- a/ui/src/app/@auth/register/register.component.html
+++ b/ui/src/app/@auth/register/register.component.html
@@ -42,7 +42,7 @@
   </div>
 
   <div class="modal-footer d-flex justify-content-center">
-    <button mdbBtn color="deep-orange" class="waves-light" mdbWavesEffect (click)="confirmOperation()">
+    <button mdbBtn color="purple" class="waves-light" mdbWavesEffect (click)="confirmOperation()">
     Зарегистрироваться
     </button>
   </div>
