--- a/ui/src/app/layout/ingredient-list/ingredient-list.component.sass
+++ b/ui/src/app/layout/ingredient-list/ingredient-list.component.sass
@@ -33,3 +33,8 @@
   min-width: 31px
   width: 31px
 
+.normal-shadow
+  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15) !important
+
+.blue-shadow
+  box-shadow: 0 4px 10px 0 rgba(0, 0, 255, 0.18), 0 4px 15px 0 rgba(0, 0, 255, 0.15) !important
