Add login and register errors on form

--- a/ui/src/app/@auth/login/login.component.html
+++ b/ui/src/app/@auth/login/login.component.html
@@ -18,6 +18,10 @@
       </mdb-error>
     </div>
 
+    <div class="login-error" *ngIf="loginError">
+      {{loginError}}
+    </div>
+
   </div>
   <div class="modal-footer d-flex justify-content-center">
     <button mdbBtn color="indigo" class="waves-light" mdbWavesEffect (click)="confirmOperation()">Войти</button>
